<resources>
    <string name="app_name">Dorm Board</string>
    <string name="default_ads">Тенисная комната не работает</string>
    <string name="default_ads_date">27.04.2022 09:02</string>
    <string name="product_default_name">Стул для офиса</string>
    <string name="product_default_price">2780 руб</string>
    <string name="product_image_description">product image</string>
    <string name="product_fav_description">product_fav_icon</string>
    <string name="button_write_msg">НАПИСАТЬ</string>
    <string name="product_content">Стул для офиса\n2780 руб.\nЖак\nКомната 533\n10.03.2022</string>
    <string name="ads_content">Стул для офиса\n2780 руб.\n10.03.2022</string>
    <string name="home_ads_adding_title">МОИ ОБЪЯВЛЕНИЯ</string>
    <string name="missing_data">Пока нет объявлений</string>
    <string name="btn_add_ads">Разместить объявление</string>
    <string name="add_product_name_input">Название продукта</string>
    <string name="add_product_price_input">Стоимость</string>
    <string name="btn_publish_product">Опупликовать</string>
    <string name="edit_ads">Редактирование объявления</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_edit">Изменить</string>
    <string name="btn_delete_ads">Удалить</string>
    <string name="delete_ads">Удаление объявления</string>
    <string name="radio_button_ads_sold">Я продал продукту</string>
    <string name="checkbox_no_sel">Я больше не хочу продать</string>
    <string name="message_page_title">СООБЩЕНИЯ</string>
    <string name="edit_message">сообщение</string>
    <string name="button_chat_send">Отправить</string>
    <string name="chat_date">30 апреля</string>
    <string name="message_from_user">Здравствуйте\nя хотел купить...</string>
    <string name="message_to_user">Мне это интересно</string>
    <string name="user_name">Жак</string>
    <string name="profile_title">Мой профиль</string>
    <string name="user_profile">Жак Кибамба\nКомната 533</string>
    <string name="add_statement">Добавить заявление</string>
    <string name="all_statements">Мои заявления</string>
    <string name="logout">ВЫЙТИ</string>
    <string name="added_statement">Текст добавленного заявления</string>
    <string name="button_add">Добавить</string>
</resources>