<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="550dp">
    <TextView
        android:id="@+id/text_delete_ads_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/delete_ads"
        style="@style/TitleTextStyle"
        android:gravity="center"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/black_chair"
                />
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/view_separation"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/product_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ads_content"
            android:layout_marginLeft="10dp"
            style="@style/SubtitleTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardView"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RadioGroup
        android:id="@+id/radio_group_sold_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_ads_sold"
            android:layout_marginTop="10dp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_button_no_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_no_sel"/>
    </RadioGroup>
    <Button
        android:id="@+id/button_delete_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_ads"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/button_cancel_edit_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>