<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/chair"
            android:contentDescription="@string/product_image_description" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_instar"
            android:contentDescription="@string/product_fav_description"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/product_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/product_default_name"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        style="@style/SubtitleTextStyle"
        />
    <TextView
        android:id="@+id/product_price"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/product_default_price"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintStart_toStartOf="@id/cardView"
        style="@style/SubtitleTextStyle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>