<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ic_camera"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_camera"
        android:layout_gravity="center"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/added_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/black_chair"
        android:layout_gravity="center"
        android:importantForAccessibility="no" />
    <EditText
        android:id="@+id/product_name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_product_name_input"
        style="@style/DefaultTextStyle"
        android:inputType="text" />
    <EditText
        android:id="@+id/product_price_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_product_price_input"
        android:layout_marginTop="10dp"
        style="@style/DefaultTextStyle"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/button_publish_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_publish_product"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
</LinearLayout>