<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/text_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            style="@style/TitleTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_add_statement"
            />
    <Button
        android:id="@+id/button_add_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_statement"
        app:layout_constraintTop_toBottomOf="@id/user_profile_picture"
        style="@style/TitleTextStyle"
        android:backgroundTint="@color/white"
        />
    <Button
        android:id="@+id/button_all_statements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/all_statements"
        app:layout_constraintTop_toBottomOf="@id/button_add_statement"
        style="@style/TitleTextStyle"
        android:backgroundTint="@color/white"
        />
    <Button
        android:id="@+id/button_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        style="@style/TitleTextStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>