<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/text_added_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/added_statement"
        android:inputType="textMultiLine"
        android:lines="15"
        android:maxLines="25"
        android:gravity="top|start"
        style="@style/TitleTextStyle"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/button_add_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_added_statement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonTitle"/>
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_added_statement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndtOf="@+id/button_add_statement"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>